# soundpad_deck

./: .gitignore  CMakeLists.txt  README.md  SoundpadRemoteControl.java  build_api.bat
.github/workflows/: release.yml
api/: api_icon.rc  main.cpp
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/soundpad_deck/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: app.dart  main.dart
app/lib/components/: audio_grid.dart  audio_tile.dart  audio_upload_preview_dialog.dart  connection_header.dart
app/lib/controllers/: audio_library_controller.dart
app/lib/l10n/: app_en.arb  app_pt.arb
app/lib/models/: soundpad_audio.dart
app/lib/pages/: audio_library_page.dart
app/lib/services/: audio_image_store_service.dart  audio_selection_service.dart  image_selection_service.dart  network_discovery_service.dart  soundpad_api_service.dart
app/lib/theme/: app_theme.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner/: Info.plist
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
